--- a/week1/day5/example-handlebars/package.json
+++ b/week1/day5/example-handlebars/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "todo-list",
+  "name": "example-handlebars",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.0.3",
-    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "uuidv4": "^6.2.13"
+    "express-handlebars": "^7.0.7"
   }
 }
