--- a/week4/day2/psql/package.json
+++ b/week4/day2/psql/package.json
@@ -1,7 +1,6 @@
 {
   "name": "psql",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -18,5 +17,6 @@
     "express": "^4.18.2",
     "pg": "^8.11.0",
     "sequelize": "^6.32.0"
-  }
+  },
+  "description": ""
 }
